<resources>
    <string name="app_name">Sinlish</string>
    <string name="story">Story Book</string>
    <string name="quiz">Quiz</string>
    <string name="vocab">Vocabulary</string>
    <string name="homeTitle1">What do you want</string>
    <string name="homeTitle2">to learn?</string>
    <string name="a_glass_envelope">My daughter, Jane,\nnever dreamed of\nreceiving a letter\nfrom a girl of her\nown age in Holland.\nLast year, we were\ntraveling across the\nChannel and Jane\nput a piece of paper\nwith her name and\naddress on it into a\nbottle. She threw\nthe bottle into the\nsea. She never\nthought of it again,\nbut ten month later,\nshe received a letter\nfrom a girl in\nHolland. Both girls\nwrite to each other\nregularly now.\nHowever, they have\ndecided to use the\npost office. Letters\nwill cost a little\nmore, but they will\ncertainly travel\nfaster.\n</string>
    <string name="a_new_house">I had a letter from\nmy sister yesterday.\nShe lives in Algeria. \nIn her letter, she \nsaid that she would\ncome to England\nnext year. It she\ncomes, she will get\na surprise. We are\nnow living in a\nbeautiul new house\nin the country. Work\non it has begun be\nbefore my sister left.\nThe house was\ncompleted five\nmonths ago. In my\nletter, I told her that\nshe could stay with\nus. The house has\nmany large rooms\nand there is a lovely\ngarden it is a very\nmodern house, so it\nlooks, strange to\nsome people. It\nlooks, strange to\nsome people. it \nmust be the only\nmodern house in the\ndistrict</string>
    <string name="wet_night">Late in the\nafternoon, boys put\nup their tent in the\nmiddle of a field. As\nsoon as this was\ndone, they cooked\na meal over an\nopen fire. They\nwere all hungry and\nthe food smelt\ngood. after a\nwonderful meal,\nthey told stories\nand sang songs by\nthe camp fire. But\nsome time later it\nbegan to rain. The\nboys felt tired so\nthey put out the fire\nand crept into their\ntent. Their sleeping\nbags were warm\nand comfortable,\nso they all slept\nsoundly. In the\nmiddle of the night,\ntwo boys woke up\nand began\nshouting.The tent\nwas full of water!\nThey all leap out of\ntheir sleeping bags\nand hurried\noutside. It was\nraining heavily and\nthe fount that a\nstream had formed\nin field. The stream\nwound its way\nacross the field and\nthen flowed right
under their tent!</string>
</resources>